test/Fail/UnequalHidingInstance.err
UnequalHidingInstance.agda:10.5-44: error: [UnequalTypes]
The function type
  ⦃ x = x₁ : A ⦄ → B x₁ → B x₁
is not a subtype of
  (x₁ : A) → B x₁ → B x₁
because:
  one takes an instance argument, while the other takes a visible
  argument.
when checking that the expression
λ (id : (x₁ : A) → B x₁ → B x₁) → id x y has type
(⦃ x = x₁ : A ⦄ → B x₁ → B x₁) → B x
